force-app/main/default/objects/NotionDatabase__mdt/NotionDatabase__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Notion databases</description>
    <label>Notion Database</label>
    <pluralLabel>Notion Databases</pluralLabel>
</CustomObject>