force-app/main/default/objects/NotionDatabase__mdt/fields/DatabaseId__c.field-meta.xml
<CustomField>
    <fullName>DatabaseId__c</fullName>
    <description>Notion database ID</description>
    <label>Database ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>