force-app/main/default/objects/NotionDatabase__mdt/fields/DatabaseName__c.field-meta.xml
<CustomField>
    <fullName>DatabaseName__c</fullName>
    <description>Friendly name for the database</description>
    <label>Database Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>