force-app/main/default/objects/NotionDatabase__mdt/fields/WorkspaceId__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceId__c</fullName>
    <description>Notion workspace ID</description>
    <label>Workspace ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>